<resources>
    <string name="app_name">Mountain App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="mount_picture">Mount Picture</string>
    <string name="sky_picture">sky picture</string>
    <string name="description_app">your one stop mountain content app</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="fill_username_password">Enter your username and password</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="password_less_than_6_char">password less than 6 characters</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="fill_credentials">Enter your credentials to continue</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="login_success">login successfully!</string>
    <string name="sorry">Sorry</string>
    <string name="unable_to_login">Unable to login. Incorrect Email or Password. Please try again.</string>
    <string name="unable_to_signup">Registration was not successful. Incorrect username, email, or password. Please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="user_created">User Created</string>
    <string name="login_to_continue">Please login to continue</string>
    <string name="continue_btn">continue</string>
    <string name="name">Name</string>
    <string name="mount_icon">Mount Icon</string>
    <string name="logout_successful">Logout successful!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name_mount">Name of Mount</string>
    <string name="location">Location</string>
    <string name="data_is_empty">Data is Empty</string>
    <string name="description">description</string>
    <string name="uploaded_on">uploaded at</string>
    <string name="someone_s_story_image">someone feeds</string>
    <string name="welcoming">Hi, %1s\nWelcome to Mountain App 👋</string>
    <string name="profile_picture_user">profile picture</string>
    <string name="greeting">Hi %1s</string>
    <string name="greeting2">Stay Healty</string>
    <string name="expandable_floating_action_button">floating icon</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Unggah</string>
    <string name="gambar_header">gambar header</string>
    <string name="your_account">Your Account</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="scan_mount">Scan Mount</string>
    <string name="top_2_mount">Top 2 Mount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_from">Scan mount from:</string>
    <string name="mountain_has_been_identified">Mountain has been identified!</string>
    <string name="go_to_detail_mount">Go to Detail Mount</string>
    <string name="gunung_1s">Gunung %1s</string>
    <string name="result">Result:</string>
    <string name="go_back">Go Back</string>
    <string name="mountain_detail">Mountain Detail</string>
    <string name="history">history:</string>
    <string name="detail_history">detail history</string>
    <string name="elevation">elevation:</string>
    <string name="detail_elevation">detail elevation</string>
    <string name="add_feed">Add Feed</string>
    <string name="preview_image">preview image</string>
    <string name="upload_image_from">Upload Image From:</string>
    <string name="upload_feed">Upload Feed</string>

    <string name="upload_a_story">upload</string>
    <string name="add_story">Add Photo</string>
    <string name="preview_image_before_upload">preview image</string>


    <string-array name="user_name_feeds">
        <item>Yendra</item>
        <item>Fadli</item>
        <item>Handy</item>
        <item>Ferdio</item>
    </string-array>

    <string-array name="gunung_description_feeds">
        <item>Indahnya pemandangan</item>
        <item>Pagi ini di rinjani</item>
        <item>Kamu kapan kesini</item>
        <item>Ayo ke ijen</item>
    </string-array>

    <string-array name="gunung_uploadedAt_feeds">
        <item>12–06–2022</item>
        <item>12–06–2022</item>
        <item>12–06–2022</item>
        <item>12–06–2022</item>
    </string-array>

    <integer-array name="gunung_photo_feeds">
        <item>@drawable/bromo</item>
        <item>@drawable/rinjani</item>
        <item>@drawable/papandayan</item>
        <item>@drawable/ijen</item>
    </integer-array>


    <integer-array name="favorite_photo">
        <item>@drawable/bromo</item>
        <item>@drawable/papandayan</item>
    </integer-array>

    <string-array name="mountain_favorite_name">
        <item>Gunung Bromo</item>
        <item>Gunung Papandayan</item>
    </string-array>

    <string-array name="mountain_favorite_location">
        <item>Jawa Timur</item>
        <item>Jawa Barat</item>
    </string-array>
</resources>