<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_home_black_24dp"-->
<!--        android:title="@string/title_home" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_feeds"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_feeds" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_favorite"-->
<!--        android:icon="@drawable/ic_favorite_black_24"-->
<!--        android:title="@string/title_favorite" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_profile"-->
<!--        android:icon="@drawable/ic_profile_black_24"-->
<!--        android:title="@string/title_profile" />-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_feeds"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_feeds" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24"
        android:title="@string/title_profile" />
</menu>