<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailmount.DetailMountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mountain_detail"
                android:textColor="@color/van_dyke_brown"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_story_detail"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:padding="8dp"
            android:transitionName="storyimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:src="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            android:rating="5"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintStart_toStartOf="@+id/img_story_detail"
            app:layout_constraintTop_toBottomOf="@+id/img_story_detail" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ic_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_loc_1"
            app:layout_constraintEnd_toStartOf="@+id/tv_loc_1"
            app:layout_constraintTop_toTopOf="@+id/tv_loc_1" />

        <TextView
            android:id="@+id/tv_loc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            android:textColor="@color/braindeis_blue"
            app:layout_constraintEnd_toEndOf="@+id/img_story_detail"
            app:layout_constraintTop_toBottomOf="@+id/img_story_detail" />


        <TextView
            android:id="@+id/history_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/history"
            android:textColor="#828282"
            app:layout_constraintStart_toStartOf="@+id/tv_elevation"
            app:layout_constraintTop_toBottomOf="@+id/tv_elevation" />

        <TextView
            android:id="@+id/tv_history_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/detail_history"
            android:textColor="@color/van_dyke_brown"
            android:textSize="16sp"
            android:transitionName="description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/history_detail"
            app:layout_constraintTop_toBottomOf="@+id/history_detail" />

        <TextView
            android:id="@+id/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/elevation"
            android:textColor="#828282"
            app:layout_constraintStart_toStartOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/tv_elevation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/detail_elevation"
            android:textColor="@color/van_dyke_brown"
            android:textSize="16sp"
            android:transitionName="description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/elevation"
            app:layout_constraintTop_toBottomOf="@+id/elevation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>